--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+* {
+    font-family: Chalkduster, "Marker Felt", fantasy;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    background-image: url("./assets/background.png");
+    background-repeat: no-repeat;
+
+    color: whitesmoke;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#titleLabel {
+    margin: 3vmin;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#miscLabels {
+    margin-right: 3vmin;
+    text-align: right;
 }
 
-.App-link {
-  color: #61dafb;
+#wordSearcher {
+    align-items: center;
+    display: grid;
+    grid-column-gap: 2vmin;
+    grid-template-columns: auto auto 70%;
+    margin-left: 3vmin;
+    margin-right: 3vmin;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#wordSearcher > * {
+    background-color: whitesmoke;
+    color: dimgray;
+    max-width: 30vmax;
+    opacity: 90%;
+}
+
+@media only screen and (max-width: 740px) {
+
+    body {
+        background-image: url("./assets/mobile-background.png");
+        background-size: unset;
+    }
+
+    #wordSearcher {
+        grid-template-columns: 80% auto;
+    }
+
+    #wordSearcher > * {
+        max-width: 70vmin;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+
+    body {
+        background-image: url("./assets/background.png");
+        background-size: unset;
+    }
+}
+
+@media only screen and (min-width: 1920px) {
+
+    body {
+        background-image: url("./assets/background.png");
+        background-size: cover;
+    }
 }
