--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 body {
     background-image: url("./assets/background.png");
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     color: whitesmoke;
 }
 
